--- a/includes/3-2_header.html
+++ b/includes/3-2_header.html
@@ -15,10 +15,10 @@
 			<h3>Menu</h3>
 			<ul>
 				<li class="navtop"><a href="index.php" title="Go to the home page">Home</a></li>
+				<li><a href="calculator.php" title="Use the Sales Calculator">Calaulator</a></li>
+				<li><a href="dateform.php" title="Check out the Date Form">Date Form</a></li>
 				<li><a href="register.php" title="Register">Register</a></li>
-				<li><a href="view_user.php" title="View the Exist users">Vie Users</a></li>
-				<li><a href="password.php" title="Change Your Password">Chage Password</a></li>
 			</ul>
 		</div>
-		<!-- Script 7.1 - header.html -->
+		<!-- Script 3.2 - header.html -->
 		<!-- Start of page-specific conten -->
