--- a/includes/header.html
+++ b/includes/header.html
@@ -16,7 +16,7 @@
 			<ul>
 				<li class="navtop"><a href="index.php" title="Go to the home page">Home</a></li>
 				<li><a href="register.php" title="Register">Register</a></li>
-				<li><a href="view_user.php" title="View the Exist users">Vie Users</a></li>
+				<li><a href="view_users.php" title="View the Exist users">View Users</a></li>
 				<li><a href="password.php" title="Change Your Password">Chage Password</a></li>
 			</ul>
 		</div>
